--- a/src/app.html
+++ b/src/app.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="./icon.svg" />
-    <link rel="alternate icon" href="./icon-16x16.png" />
-    <link rel="apple-touch-icon" href="./icon-apple-touch.png" />
-    <link rel="manifest" href="./manifest.json" />
+    <link rel="icon" type="image/svg+xml" href="/icon.svg" />
+    <link rel="alternate icon" href="/icon-16x16.png" />
+    <link rel="apple-touch-icon" href="/icon-apple-touch.png" />
+    <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- <script>
       if ('serviceWorker' in navigator) {
