--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
     <link rel="alternate icon" href="/icon-16x16.png" />
     <link rel="apple-touch-icon" href="/icon-apple-touch.png" />
     <link rel="manifest" href="/manifest.json" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, viewport-fit=cover" />
     <!-- <script>
       if ('serviceWorker' in navigator) {
         navigator.serviceWorker.register('./sw.js').then(function () {
