--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,7 @@
     <link rel="apple-touch-icon" href="/icon-apple-touch.png" />
     <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, viewport-fit=cover" />
+    <meta name="theme-color" content="#1e2029" />
     <!-- <script>
       if ('serviceWorker' in navigator) {
         navigator.serviceWorker.register('./sw.js').then(function () {
