--- a/src/emailTemplates/fire/quote.html
+++ b/src/emailTemplates/fire/quote.html
@@ -14,24 +14,22 @@
     <table class="section">
       <thead>
         <th>Description</th>
-        <!-- <th>Unit Price</th> -->
         <th>Extended</th>
       </thead>
       <tbody>
         {{#each items}}
         <tr>
           <td>{{this.description}}</td>
-          <!-- <td class="text-right">{{this.unitPrice}}</td> -->
           <td class="text-right">{{this.extendedPrice}}</td>
         </tr>
         {{/each}}
         {{#if copyChanges}}
         <tr>
           <td>{{copyChanges.description}}</td>
-          <!-- <td class="text-right">{{copyChanges.unitPrice}}</td> -->
           <td class="text-right">{{copyChanges.extendedPrice}}</td>
         </tr>
         {{/if}}
+        {{#if shipping.description}}
         <tr>
           <td colspan="1" style="border-top:1px solid #bbbbbb;">Product Total</td>
           <td class="text-right" style="border-top:1px solid #bbbbbb;">{{productTotal}}</td>
@@ -40,6 +38,7 @@
           <td colspan="1">{{shipping.description}}</td>
           <td class="text-right">{{shipping.extendedPrice}}</td>
         </tr>
+        {{/if}}
         <tr>
           <td colspan="1" style="border-top:1px solid #bbbbbb;">Total ( + sales tax if applicable )</td>
           <td class="text-right" style="border-top:1px solid #bbbbbb; font-weight:bold;">{{total}}</td>
