--- a/src/app.html
+++ b/src/app.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html
+	class="min-h-full flex flex-col bg-gray-50 text-gray-900 dark:bg-gray-900 dark:text-gray-50"
+	lang="en"
+>
 	<head>
 		<meta charset="utf-8" />
 		<meta name="description" content="" />
-		<link rel="icon" href="%svelte.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%svelte.head%
 	</head>
-	<body>
-		<div>%svelte.body%</div>
+	<body class="flex flex-col flex-grow">
+		<div class="flex flex-col flex-grow relative">%svelte.body%</div>
 	</body>
 </html>
